@@ -1,6 +1,7 @@
 2013-02-12  Alexander V. Lukyanov <lavv17f@gmail.com>
 
 	* Http.cc: don't call ExpandTildeInCWD every time.
+	* Http.cc: use a perfect hash for header handling.
 
 2013-02-11  Alexander V. Lukyanov <lavv17f@gmail.com>
 
